# FastAPI

./: Pipfile  README.md  poll.py  pyproject.toml  requirements.txt
.vagrant/machines/default/virtualbox/: vagrant_cwd
