[tool.poetry]
name = "fastAPI polls"
version = "0.1.0"
description = "a poll using python FastAPI"
authors = ["njokuifeanyigerald <brainbboyrichmond@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
